[package]
name = "codium"
version = "0.0.4"
description = "Codium"
authors = ["Ulrich Tonmoy"]
license = ""
repository = "https://github.com/Ulrich-Tonmoy/codium"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
